Fixed z-index on links

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,6 @@
   position: absolute;
   left: 0;
   top: 0;
-  z-index: 0;
   width: 98%;
   height: 63%;
 }
@@ -36,6 +35,7 @@
 
 .name ul {
   z-index: 98;
+  position: relative;
 }
 
 .navbar {
